fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ hr {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
-   overflow: hidden;
+   overflow: visible;
 }
 
 .sabores-container .product {
@@ -218,7 +218,7 @@ hr {
    flex-direction: row;
    justify-content: space-around;
    padding-bottom: 18px;
-   overflow: hidden;
+   overflow: visible;
 }
 
 .special-info .delivery {
